--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
     "scripts/seed.js"
-  ],
+, "app/ui/CalendarSelector.js", "app/ui/CalendarSelector.js"  ],
   "exclude": ["node_modules"]
 }
